# AutoStat

./: .gitignore  Home.py  LICENSE  README.md  README_cn.md  pyproject.toml  requirements.txt  setup.py
.dify/autostat/: manifest.json  mcp_config.json
api_server/: __init__.py  config.py  dependencies.py  main.py  requirements.txt
api_server/routers/: __init__.py  analysis.py  chat.py  config.py  data.py  export.py  models.py  quality.py  report.py  scenarios.py  session.py  stream_query.py
api_server/schemas/: __init__.py  analysis.py  data.py  models.py  report.py  session.py
api_server/services/: __init__.py  analysis_service.py  chat_service.py  config_service.py  data_service.py  database_service.py  insight_analyzer.py  insight_service.py  llm_translator.py  models_service.py  prediction_agent_service.py  quality_service.py  query_service.py  recommendation_service.py  report_service.py  scenario_engine.py  scenario_executor.py  session_service.py  stream_query_service.py  tech_fact_sheet.py
api_server/utils/: __init__.py  file_utils.py
autostat/: __init__.py  __main__.py  analyzer.py  checker.py  cli.py  config_manager.py  llm_client.py  loader.py  mcp_server.py  multi_analyzer.py  prompts.py  reporter.py
autostat/core/: __init__.py  analyzer.py  audit.py  audit_optimized.py  base.py  date_rules.py  insight.py  plots.py  recommendation.py  relationship.py  report_data.py  timeseries.py
autostat/models/: __init__.py  arima_wrapper.py  deep_learning.py  metrics.py  predictor.py  preprocessing.py  registry.py  storage.py  trainer.py
autostat/shared/: __init__.py  schemas.py  storage.py  utils.py
autotext/: __init__.py  analyzer.py  checker.py  cli.py  llm_extractor.py  llm_visualizer.py  loader.py  mcp_server.py  reporter.py
autotext/core/: __init__.py  cache.py  cluster.py  detector.py  entity.py  entity_profile.py  event_extractor.py  event_timeline.py  graph_analyzer.py  graph_builder.py  info_extractor.py  insight.py  keyword_extractor.py  llm_enhance.py  llm_graph_extractor.py  ner.py  preprocessor.py  quality.py  relation.py  relation_mining.py  report_data.py  sentiment.py  stats.py  summarizer.py  timeline_builder.py  topic.py  topic_model.py  trend.py  trend_detector.py  vectorizer.py
examples/: analyze_hot_news.py  download_bert_model.py  download_ner_model.py  example.py  example_text.py  fetch_sina_finance.py  fetch_sina_news.py  fix_uie.py  generate_hot_news.py  generate_sample_comments.py  goujicompare.py  goujiresult.py  llm_example.py  svdtest.py  test_png.py  uie_example.py  uie_example2.py  uie_example3.py  uie_example4.py  uie_example5.py  uie_example6.py  uie_example62.py  uie_example7.py
html/: index.html  package.json  vite.config.js
html/src/: App.vue  main.js
mcp_servers/: __init__.py  data_mcp.py  text_mcp.py
pages/: autostat.py  autotext.py
templates/: report.html  report_text.html
tests/: test_analyzer.py  test_text_analyzer.py
web/: __init__.py  app.py
web/components/: __init__.py  agent_inference.py  ai_assistant.py  audit_rule.py  chat_interface.py  data_preparation.py  db_analysis.py  decision_panel.py  demo_data.py  empty_state.py  explore_panel.py  forecast_panel.py  inference.py  model_center.py  model_training.py  multi_analysis.py  natural_query.py  preview_report.py  progress_stage.py  quality_dashboard.py  quick_templates.py  results.py  scenario_recommendation.py  sidebar.py  single_analysis.py  sql_generator.py  tabs.py  term_tooltip.py  tips.py  value_preview.py
web/config/: storage.py
web/services/: __init__.py  (+17 more)
webtext/: __init__.py  app.py
(+103 files in other folders)
